--- a/_includes/about.html
+++ b/_includes/about.html
@@ -3,25 +3,22 @@
   <div class="container">
     <div class="row">
       <div class="col-lg-12 text-center">
-        <h2>About</h2>
+        <h2>Sobre</h2>
         <hr class="star-light">
       </div>
     </div>
     <div class="row">
       <div class="col-lg-4 col-lg-offset-2">
-        <p>Freelancer is a free bootstrap theme created by Start Bootstrap. The download includes the complete
-          source files including HTML, CSS, and JavaScript as well as optional LESS stylesheets for easy
-          customization.</p>
+        <p>Conheça Heitor de Magalhães, o jovem talento do tênis que está conquistando o mundo esportivo! Com apenas alguns anos de prática, Heitor já se destaca nas quadras com suas habilidades impressionantes e dedicação incansável. Seu amor pelo esporte é evidente em cada jogo que disputa, e sua determinação em alcançar novos patamares é inspiradora para todos ao seu redor. Não há dúvidas de que estamos diante de uma promessa do tênis, e mal podemos esperar para testemunhar o que o futuro reserva para esse brilhante atleta!</p>
       </div>
       <div class="col-lg-4">
-        <p>Whether you're a student looking to showcase your work, a professional looking to attract clients, or
-          a graphic artist looking to share your projects, this template is the perfect starting point! </p>
+        <p>Heitor de Magalhães é sinônimo de paixão e perseverança no mundo do tênis. Sua jornada começou cedo, mas seu talento inato e compromisso com o esporte o levaram a grandes conquistas. O que impressiona a todos é sua capacidade de se superar a cada desafio e aprender com cada partida, tornando-o um oponente formidável. Com o apoio de sua família, treinadores e fãs, Heitor continua aprimorando suas habilidades e buscando a excelência no tênis. Acompanhe de perto essa trajetória incrível, pois o futuro brilhante de Heitor de Magalhães no mundo do tênis é algo que não se pode perder!</p>
       </div>
-      <div class="col-lg-8 col-lg-offset-2 text-center">
+      <!-- <div class="col-lg-8 col-lg-offset-2 text-center">
         <a href="https://github.com/jeromelachaud/freelancer-theme" class="btn btn-lg btn-outline">
           <i class="fa fa-download"></i> Download Theme
         </a>
-      </div>
+      </div> -->
     </div>
   </div>
 </section>
